added CAD to available models

--- a/training_forex_model.ipynb
+++ b/training_forex_model.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python\\python36\\lib\\site-packages\\sklearn\\externals\\joblib\\__init__.py:15: DeprecationWarning: sklearn.externals.joblib is deprecated in 0.21 and will be removed in 0.23. Please import this functionality directly from joblib, which can be installed with: pip install joblib. If this warning is raised when loading pickled models, you may need to re-serialize those models with scikit-learn 0.21+.\n",
+      "  warnings.warn(msg, category=DeprecationWarning)\n",
+      "c:\\python\\python36\\lib\\site-packages\\IPython\\core\\interactiveshell.py:3058: DtypeWarning: Columns (11,12,13,14,15,18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  interactivity=interactivity, compiler=compiler, result=result)\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.neural_network import MLPRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
@@ -23,8 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -51,6 +64,23 @@
        "      <th>CostOf1USD</th>\n",
        "      <th>Currency</th>\n",
        "      <th>CurrencyClassification</th>\n",
+       "      <th>Unnamed: 4</th>\n",
+       "      <th>Unnamed: 5</th>\n",
+       "      <th>Unnamed: 6</th>\n",
+       "      <th>Unnamed: 7</th>\n",
+       "      <th>Unnamed: 8</th>\n",
+       "      <th>Unnamed: 9</th>\n",
+       "      <th>...</th>\n",
+       "      <th>Currency.1</th>\n",
+       "      <th>IDR</th>\n",
+       "      <th>Unnamed: 13</th>\n",
+       "      <th>Unnamed: 14</th>\n",
+       "      <th>Unnamed: 15</th>\n",
+       "      <th>Unnamed: 16</th>\n",
+       "      <th>Unnamed: 17</th>\n",
+       "      <th>currency</th>\n",
+       "      <th>m</th>\n",
+       "      <th>b</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -60,6 +90,23 @@
        "      <td>1.620154</td>\n",
        "      <td>AUD</td>\n",
        "      <td>1</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>BRL</td>\n",
+       "      <td>0.000576</td>\n",
+       "      <td>-21.395869</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -67,6 +114,23 @@
        "      <td>1.527186</td>\n",
        "      <td>CAD</td>\n",
        "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>Row Labels</td>\n",
+       "      <td>Average of CostOf1USD</td>\n",
+       "      <td>Row Labels</td>\n",
+       "      <td>Average of CostOf1USD</td>\n",
+       "      <td>regressed</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>CHF</td>\n",
+       "      <td>-0.000103</td>\n",
+       "      <td>5.298934</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -74,6 +138,23 @@
        "      <td>1.371448</td>\n",
        "      <td>CHF</td>\n",
        "      <td>3</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38443</td>\n",
+       "      <td>9469.997685</td>\n",
+       "      <td>38443</td>\n",
+       "      <td>9469.997685</td>\n",
+       "      <td>8089.389823</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>IDR</td>\n",
+       "      <td>1.123087</td>\n",
+       "      <td>-35085.428340</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -81,6 +162,23 @@
        "      <td>29.779455</td>\n",
        "      <td>CZK</td>\n",
        "      <td>4</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38446</td>\n",
+       "      <td>9485.003493</td>\n",
+       "      <td>38446</td>\n",
+       "      <td>9485.003493</td>\n",
+       "      <td>8092.759083</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>INR</td>\n",
+       "      <td>0.007468</td>\n",
+       "      <td>-253.146385</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -88,21 +186,62 @@
        "      <td>6.319535</td>\n",
        "      <td>DKK</td>\n",
        "      <td>5</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>38447</td>\n",
+       "      <td>9495.003903</td>\n",
+       "      <td>38447</td>\n",
+       "      <td>9495.003903</td>\n",
+       "      <td>8093.882169</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MXN</td>\n",
+       "      <td>0.002162</td>\n",
+       "      <td>-74.920543</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      Date  CostOf1USD Currency  CurrencyClassification\n",
-       "0  36164.0    1.620154      AUD                       1\n",
-       "1  36164.0    1.527186      CAD                       2\n",
-       "2  36164.0    1.371448      CHF                       3\n",
-       "3  36164.0   29.779455      CZK                       4\n",
-       "4  36164.0    6.319535      DKK                       5"
+       "      Date  CostOf1USD Currency  CurrencyClassification  Unnamed: 4  \\\n",
+       "0  36164.0    1.620154      AUD                       1         NaN   \n",
+       "1  36164.0    1.527186      CAD                       2         NaN   \n",
+       "2  36164.0    1.371448      CHF                       3         NaN   \n",
+       "3  36164.0   29.779455      CZK                       4         NaN   \n",
+       "4  36164.0    6.319535      DKK                       5         NaN   \n",
+       "\n",
+       "   Unnamed: 5  Unnamed: 6  Unnamed: 7  Unnamed: 8  Unnamed: 9  ...  \\\n",
+       "0         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "1         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "2         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "3         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "4         NaN         NaN         NaN         NaN         NaN  ...   \n",
+       "\n",
+       "   Currency.1                    IDR Unnamed: 13            Unnamed: 14  \\\n",
+       "0         NaN                    NaN         NaN                    NaN   \n",
+       "1  Row Labels  Average of CostOf1USD  Row Labels  Average of CostOf1USD   \n",
+       "2       38443            9469.997685       38443            9469.997685   \n",
+       "3       38446            9485.003493       38446            9485.003493   \n",
+       "4       38447            9495.003903       38447            9495.003903   \n",
+       "\n",
+       "   Unnamed: 15 Unnamed: 16  Unnamed: 17  currency         m             b  \n",
+       "0          NaN         NaN          NaN       BRL  0.000576    -21.395869  \n",
+       "1    regressed         NaN          NaN       CHF -0.000103      5.298934  \n",
+       "2  8089.389823         NaN          NaN       IDR  1.123087 -35085.428340  \n",
+       "3  8092.759083         NaN          NaN       INR  0.007468   -253.146385  \n",
+       "4  8093.882169         NaN          NaN       MXN  0.002162    -74.920543  \n",
+       "\n",
+       "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
